--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "vite",
-    "build": "vite build",
+    "build": "pushd api; node create-index.js; popd; vite build",
     "preview": "vite preview --port 8080"
   },
   "repository": {
